[gd_scene load_steps=26 format=3 uid="uid://cvba5sgdncr8q"]

[ext_resource type="Script" path="res://hud.gd" id="1_0n6rd"]
[ext_resource type="Texture2D" uid="uid://blb6rjpwj6v0c" path="res://Textures/HUD/HUD_Spell_Selected.png" id="1_e7vvy"]
[ext_resource type="Texture2D" uid="uid://dbv013ab4xhim" path="res://Textures/HUD/HUD_Spell_Frame.png" id="1_tkq8k"]
[ext_resource type="Texture2D" uid="uid://dax2xq4qkxcq" path="res://Textures/HUD/HUD_Spell_Colt.png" id="3_d7hq6"]
[ext_resource type="Texture2D" uid="uid://bp7ebic5k2ovo" path="res://Textures/HUD/HUD_Spell_Fireball.png" id="4_sdbw8"]
[ext_resource type="Texture2D" uid="uid://def5k81bn5sgp" path="res://Textures/HUD/HUD_Spell_Wind.png" id="5_2em1o"]
[ext_resource type="Texture2D" uid="uid://dgy1ft32wvyn6" path="res://Textures/HUD/HUD_Spell_Lightning.png" id="5_sy32u"]
[ext_resource type="Texture2D" uid="uid://bms2pofk10gul" path="res://Textures/HUD/HUD_Feedback_Damage.png" id="5_yt1fo"]
[ext_resource type="Texture2D" uid="uid://dmj5yegf7xpi" path="res://Textures/HUD/HUD_Feedback_Fireball.png" id="6_866la"]
[ext_resource type="Texture2D" uid="uid://1bpprt3hwwde" path="res://Textures/HUD/HUD_Feedback_Wind.png" id="8_npk1c"]
[ext_resource type="Texture2D" uid="uid://bvuqp0y6dkj8c" path="res://Textures/HUD/HUD_Spell_Highjump.png" id="8_rosmi"]
[ext_resource type="Texture2D" uid="uid://b3gx8jvaqkys7" path="res://Textures/HUD/HUD_Feedback_Lightning.png" id="9_10ud5"]
[ext_resource type="Texture2D" uid="uid://ctrr43dl7txia" path="res://Textures/HUD/HUD_Spell_StickyLight.png" id="9_xigtq"]
[ext_resource type="Texture2D" uid="uid://bheu11ige543" path="res://Textures/HUD/HUD_Feedback_Highjump.png" id="13_0c8d3"]
[ext_resource type="Texture2D" uid="uid://h8thu3omf7r5" path="res://Textures/HUD/HUD_Feedback_StickyLight.png" id="14_ujx24"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxw4b"]
bg_color = Color(1, 0.206578, 0.208542, 0.470588)

[sub_resource type="Theme" id="Theme_x65dp"]
default_font_size = 65

[sub_resource type="Theme" id="Theme_ewo4b"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_7ccke"]
default_font_size = 25

[sub_resource type="Animation" id="Animation_rcuaw"]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1-1-aspect/ScreenSpace_Effects:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gseff"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1-1-aspect/ScreenSpace_Effects:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mlxnd"]
_data = {
"Fade": SubResource("Animation_rcuaw"),
"RESET": SubResource("Animation_gseff")
}

[sub_resource type="Animation" id="Animation_qymi8"]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1-1-aspect/ScreenSpace_Effects2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_o3age"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1-1-aspect/ScreenSpace_Effects2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s0y6u"]
_data = {
"Fade": SubResource("Animation_qymi8"),
"RESET": SubResource("Animation_o3age")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0n6rd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="1-1-aspect" type="AspectRatioContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenSpace_Effects" type="PanelContainer" parent="Control/1-1-aspect"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Fireball_Feedback" type="TextureRect" parent="Control/1-1-aspect/ScreenSpace_Effects"]
visible = false
self_modulate = Color(1, 1, 1, 0.235294)
layout_mode = 2
texture = ExtResource("6_866la")
expand_mode = 4

[node name="Lightning_Feedback" type="TextureRect" parent="Control/1-1-aspect/ScreenSpace_Effects"]
visible = false
self_modulate = Color(1, 1, 1, 0.235294)
layout_mode = 2
texture = ExtResource("9_10ud5")
expand_mode = 4

[node name="Wind_Feedback" type="TextureRect" parent="Control/1-1-aspect/ScreenSpace_Effects"]
visible = false
self_modulate = Color(1, 1, 1, 0.235294)
layout_mode = 2
texture = ExtResource("8_npk1c")
expand_mode = 4

[node name="Highjump_Feedback" type="TextureRect" parent="Control/1-1-aspect/ScreenSpace_Effects"]
visible = false
self_modulate = Color(1, 1, 1, 0.235294)
layout_mode = 2
texture = ExtResource("13_0c8d3")
expand_mode = 4

[node name="StickyLight_Feedback" type="TextureRect" parent="Control/1-1-aspect/ScreenSpace_Effects"]
visible = false
self_modulate = Color(1, 1, 1, 0.235294)
layout_mode = 2
texture = ExtResource("14_ujx24")
expand_mode = 4

[node name="ScreenSpace_Effects2" type="PanelContainer" parent="Control/1-1-aspect"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Damage_Feedback" type="TextureRect" parent="Control/1-1-aspect/ScreenSpace_Effects2"]
visible = false
layout_mode = 2
texture = ExtResource("5_yt1fo")
expand_mode = 4

[node name="ColorRect" type="ColorRect" parent="Control/1-1-aspect"]
custom_minimum_size = Vector2(3, 3)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 1, 1, 0.313726)

[node name="16-9-aspect" type="AspectRatioContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="VBoxContainer" type="VBoxContainer" parent="Control/16-9-aspect"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/16-9-aspect/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/16-9-aspect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Healthbar" type="ProgressBar" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 7.0
theme_override_font_sizes/font_size = 20
theme_override_styles/fill = SubResource("StyleBoxFlat_bxw4b")
value = 35.0

[node name="PanelContainer2" type="PanelContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 29

[node name="PanelContainer" type="PanelContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer2/MarginContainer"]
self_modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Magazine_Label" type="Label" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
theme = SubResource("Theme_x65dp")
theme_override_colors/font_color = Color(1, 1, 1, 0.784314)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.27451)
theme_override_constants/shadow_outline_size = 15
text = "7"
horizontal_alignment = 2

[node name="Slash_Label" type="Label" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource("Theme_ewo4b")
theme_override_colors/font_color = Color(1, 1, 1, 0.509804)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.27451)
text = "/"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ammo_Label" type="Label" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 9.0
theme = SubResource("Theme_7ccke")
theme_override_colors/font_color = Color(1, 1, 1, 0.509804)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.27451)
text = "âˆž"
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="PanelContainer4" type="PanelContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer"]
self_modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Spell_Frame_L" type="PanelContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Frame_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_L"]
self_modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
texture = ExtResource("1_tkq8k")
expand_mode = 1
stretch_mode = 4

[node name="Frame_Fireball_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_L"]
visible = false
self_modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
texture = ExtResource("4_sdbw8")
expand_mode = 1
stretch_mode = 4

[node name="Frame_Lightning_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_L"]
visible = false
self_modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
texture = ExtResource("5_sy32u")
expand_mode = 1
stretch_mode = 4

[node name="Frame_Wind_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_L"]
visible = false
self_modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
texture = ExtResource("5_2em1o")
expand_mode = 1
stretch_mode = 4

[node name="Frame_Highjump_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_L"]
visible = false
self_modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
texture = ExtResource("8_rosmi")
expand_mode = 1
stretch_mode = 4

[node name="Frame_StickyLight_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_L"]
visible = false
self_modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
texture = ExtResource("9_xigtq")
expand_mode = 1
stretch_mode = 4

[node name="Spell_Selected_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_L"]
self_modulate = Color(0.666667, 0.290196, 0.156863, 1)
layout_mode = 2
texture = ExtResource("1_e7vvy")
expand_mode = 1
stretch_mode = 4

[node name="Spell_Frame_R" type="PanelContainer" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Frame_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_R"]
self_modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
texture = ExtResource("1_tkq8k")
expand_mode = 1
stretch_mode = 4

[node name="Pistol_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_R"]
self_modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
texture = ExtResource("3_d7hq6")
expand_mode = 1
stretch_mode = 4

[node name="Pistol_Selected_Tex" type="TextureRect" parent="Control/16-9-aspect/VBoxContainer/HBoxContainer/PanelContainer4/MarginContainer/HBoxContainer/Spell_Frame_R"]
visible = false
self_modulate = Color(0.666667, 0.290196, 0.156863, 1)
layout_mode = 2
texture = ExtResource("1_e7vvy")
expand_mode = 1
stretch_mode = 4

[node name="Feedback_fade" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_mlxnd")
}

[node name="Damage_fade" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_s0y6u")
}
